# gstreamer-hand-recognition

./: .gitignore  .ignore  .ignore~  README
gsthanddetect_app/: .cproject  .ignore~  .project
gsthanddetect_app/Debug/: gst_handdetect_plugin  gsthanddetect_app  makefile  objects.mk
gsthanddetect_app/Debug/src/: main.d  main.lo  playmp3.d  subdir.mk
gsthanddetect_app/src/: main.c  playmp3.c
gsthanddetect_plugin_so/: .cproject  .project  gsthanddetect.c  gsthanddetect.h
gsthanddetect_plugin_so/Debug/: makefile  subdir.mk
gsthanddetect_so/: .cproject  .gitignore  .ignore  .project  Makefile.am  debug.h  gsthanddetect.c  gsthanddetect.c.bak0  gsthanddetect.c~  gsthanddetect.h  gsthanddetect.h~  gstopencvutils.h
gsthanddetect_so/Debug/: gsthanddetect.d  gsthanddetect.lo  gstopencvutils.d  gstopencvvideofilter.d  makefile  objects.mk  subdir.mk
gsthanddetect_so/Release/: makefile  subdir.mk
opencv_handdetect/: .cproject  .project  haartraining3.xml  handFistHAAR.xml  handgesturehaar.xml  handgesturehaar2.xml  pos_palm2_haartraining.xml
opencv_handdetect/Debug/: makefile  objects.mk  opencv_handdetect
opencv_handdetect/Debug/src/: opencv_handdetect.d  subdir.mk
opencv_handdetect/src/: opencv_handdetect.cpp
